tmp/app-nginx.yaml
---
# nginx.yaml 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
        - name: nginx
          image: wowai/go-rest-postgres
          ports:
          - containerPort: 80

---
#nginx-service.yaml 
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
  labels:
    name: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
  selector:
    name: nginx
